--- a/src/components/Application/Application.scss
+++ b/src/components/Application/Application.scss
@@ -1,16 +1,19 @@
 @import "../../styles/mixins.scss";
 
-.application{
+.application {
+
+  &_inner{
+  
     @include backgroundImage("../../assets/application-back.png", 725px,100%);
-    width: 100%; 
     height: 725px; 
     display: flex;
-    padding-top: 100px;
     align-items: center; 
+    border-radius: 30px;
     justify-content: space-between;
     flex-direction: column;
     position: relative;
     overflow: hidden;
+    padding-top: 100px;
 
 
     @include respond(phone){
@@ -18,7 +21,7 @@
       height: auto;
       aspect-ratio: 1 / 0.9; 
     }
-
+  }
     &_left{
         position: absolute;
         left: 5%;
@@ -67,9 +70,9 @@
           }
     }
     .phone-emulator{
-
+      transform: translateY(-10px);
       @include respond(phone){
-        width: 90%;
+        width: 80%;
         z-index: 5;   
         transform: translateY(-10%);     
       }
@@ -80,8 +83,11 @@
       justify-content: space-between;
       flex-direction: column;
       width: 80%;
+      gap:30px;
       text-align: center;
-      
+      @include respond(phone){
+        gap:0;
+      }
       
       h2{
         font-size: 64px;
