--- a/src/components/IdentificationType/IdentificationType.scss
+++ b/src/components/IdentificationType/IdentificationType.scss
@@ -1,12 +1,12 @@
 @import "../../styles/mixins.scss";
 .identification{
   overflow: hidden;
+
     &__container{
         display: flex;
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        margin-block: 60px;
         gap: 60px;
         text-align: center;
         @include respond(phone){
@@ -19,7 +19,7 @@
             font-size: 18px;
             font-weight: 600;
             color: #1ED768;
-
+            letter-spacing: 0px;
             @include respond(phone){
               font-size: 14px;
             }
@@ -27,10 +27,11 @@
         h1{
             font-size: 64px;
             font-weight: 600;
-            letter-spacing: -2px;
+            letter-spacing: -2x;
             @include respond(phone){
               font-size: 24px;
               letter-spacing: -1px;
+              margin-top: 14px;
             }
         }
 
