--- a/src/components/PaymentEvolution/PaymentEvolution.scss
+++ b/src/components/PaymentEvolution/PaymentEvolution.scss
@@ -1,12 +1,13 @@
 @import "../../styles/mixins.scss"; // Обновленный импорт
 
 .evolution {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  width: 100%;
-
+  &_inner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+  }
   &__container {
     margin-block: 100px;
     @include respond(phone) {
@@ -47,10 +48,9 @@
   &__steps-track {
     display: flex;
     flex-direction: row-reverse;
-    margin-block: 20px;
     justify-content: center;
     align-items: center;
-    gap: 2vw;
+    gap: 20px;
     
   }
 
@@ -60,8 +60,8 @@
     flex-direction: column;
     text-align: center;
     justify-content: center;
-    width: 35vw;
-    height: 35vw;
+    width: 520px;
+    height: 520px;
     border: 0.75px solid #e7e9ea;
     background-color: var(--back-grey);
     border-radius: 30px;
@@ -69,8 +69,8 @@
     padding-block: 40px;
 
     @include respond(phone) {
-      width: 50vw;
-      height: 50vw;
+      width: 200px;
+      height: 200px;
     }
 
     p {
@@ -88,8 +88,8 @@
     &--nonactive {
       background-color: #fff;
       transition: transform 0.5s ease; // Smooth scale transition
-      width: 25vw;
-      height: 25vw;
+      width: 390px;
+      height: 390px;
       
 
       img {
@@ -97,8 +97,8 @@
         opacity: 0.5;
       }
       @include respond(phone){
-        width: 40vw;
-        height: 40vw;
+        width: 150px;
+        height: 150px;
       }
     }
   }
@@ -133,10 +133,6 @@
     }
 
     
-//     p{
-//       position: absolute;
-//       bottom: 0;
-//     }
 }
   
 
@@ -154,9 +150,10 @@
     h1 {
       font-size: 36px;
       font-weight: 500;
-      margin: 0;
+      margin: 20px 0 30px;
       @include respond(phone) {
         font-size: 18px;
+        margin: 0;
       }
     }
 
@@ -164,6 +161,7 @@
     
     .evolution__description{
       padding: 0 10px;
+      line-height: 1.5;
     }
     .evolution__description.expanded {
       height: 100px; 
@@ -174,15 +172,18 @@
       display: none;
       color: #889097;
       font-size: 14px;
+      padding-top: 10px;
+      width: 100%;
       font-weight: 400;         /* Устанавливает flex-контейнер */
       align-items: center;           /* Центрирует содержимое по вертикали */
       justify-content: center;
       cursor: pointer;
+      background-color:white;
 
       @include respond(phone){
         display: flex;
       }
-
+      
       span {
         margin-left: 0.5em;            /* Добавляет отступ слева к иконке */
         display: flex;
@@ -197,7 +198,6 @@
     display: flex;
     justify-content: center;
     gap: 14px;
-    margin-top: 20px;
     @include respond(phone){
       gap:6px;
       margin-top: 0;
@@ -232,8 +232,8 @@
       padding: 10px 20px;
       border: none;
       border-radius: 16px;
+      font-weight: 500;
       cursor: pointer;
-      font-weight: bold;
 
       &.next {
         background-color: #007bff;
@@ -241,7 +241,7 @@
       }
 
       &.prev {
-        background-color: var(--back-grey);
+        background-color: #F5F5F7;
         color: #1d1d1f;
       }
 
