--- a/src/components/TerminalType/TerminalType.scss
+++ b/src/components/TerminalType/TerminalType.scss
@@ -1,10 +1,17 @@
 @import "../../styles/mixins.scss";
 
 .terminal_type {
-    position: relative;
-    padding-block: 100px;
-    @include respond(phone){
-      padding-block: 30px;
+  
+  margin-block: 100px;
+
+  @include respond(phone){
+    margin-block: 60px;
+  }
+  &_inner{
+      position: relative;
+      width: 100%;
+      max-width: 1240px;
+      margin: 0 auto;
     }
   
     &_container {
@@ -37,14 +44,9 @@
   
         @include respond(tab-port) {
           flex-direction: column;
-          width: 80%;
-        }
-        @include respond(phone){
           
-          width: 100%;
-          flex-direction:row;
-          aspect-ratio: 1 / 0.5;
         }
+        
   
         &_card {
           display: inline-flex;
@@ -62,8 +64,16 @@
 
   
           @include respond(tab-port) {
+            // aspect-ratio: 1 / 0.9;
+            height: auto;
             width: 100%;
-            padding: 14px;
+            padding: 30px;
+            padding-top:0;
+            flex-direction: column-reverse;
+            align-items: center;
+            justify-content: space-between;
+            gap:30px;
+            
           }
           .card_text{
             display: flex;
@@ -73,13 +83,17 @@
             align-items: center;
             text-align: center;
             gap: 20px;
+
+            @include respond(phone){
+              justify-content: center;
+            }
           }
           h2 {
             font-size: 36px;
             font-weight: 500;
             z-index: 5;
             @include respond(phone){
-              font-size: 16px;
+              font-size: 18px;
               letter-spacing: -1px;
             }
           }
@@ -87,19 +101,26 @@
           p {
             font-size: 18px;
             font-weight: 400;            
-            
+            transition: opacity 0.3s ease, height 0.3s ease;
+            line-height: 1.5;
             @include respond(phone){
               font-size: 14px;
+              margin-top: 15px;
             }
           }
           p.hid{
-            opacity: 1;
+            // height: auto;
+            opacity: 0;
+            
           }
           p.vis {
             opacity: 1;
             height: auto;
           }
-  
+          .mobile-img{
+            position: relative;
+            width: 80%;
+          }
           img {
             width: auto;
             height: auto;
@@ -108,8 +129,8 @@
             will-change: transform;
 
             @include respond(phone){
-              // top:0;
-              bottom: 35%;
+              width: 80%;
+              bottom: 0;
             }
           }
   
@@ -123,6 +144,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
+
+            @include respond(phone){
+              display: none;
+            }
   
             img{
                 width: 22px;
@@ -137,6 +162,10 @@
             transform: translate(-50%, -50%);
             border-radius: 100%;
             background: #e7e9ea;
+
+            @include respond(phone){
+              display: none;
+            }
           }
         }
   
