--- a/src/components/WelcomePay/WelcomeMain.scss
+++ b/src/components/WelcomePay/WelcomeMain.scss
@@ -2,6 +2,7 @@
 
 
 .scroll-container{
+    width: 100%;
     display: flex;
     align-items: center; 
     justify-content: center;
@@ -11,6 +12,13 @@
     }
 
 }
+.welcome-main{
+    // padding: 140px 0 0;
+    // @include respond(phone){
+    //     padding: 60px 0 0;
+
+    // }
+}
 .welcome {
     @include backgroundImage("../../assets/welcome-back.png", 90vh, 100%); // Custom height for .welcome
     height:90vh;
@@ -19,6 +27,7 @@
     justify-content: center;
     overflow: hidden;
     position: relative;
+    border-radius: 30px;
     
     @include respond(phone){
         margin-bottom: 30px;
@@ -28,9 +37,10 @@
     .hand-line {
         position: absolute;
         width: 30%;
-        left: -10%;
-        top: 10%;
+        left: 0;
+        top: 0;
         z-index: 10;
+        transform: translate(-25%,25%);
         img{
             width: 100%;
         }
@@ -81,7 +91,7 @@
             font-weight: 500;
             color: #FFFFFF;
             font-size: 96px;
-            max-width: 1000px;
+            max-width: 800px;
             text-align: center;
             line-height: 1;
         }
@@ -100,6 +110,7 @@
 
 .mobile-text {
     display: none;
+
     h2 {
         letter-spacing: -2px;
         font-family: "Golos Text", sans-serif;
@@ -147,8 +158,9 @@
     }
 
         .mobile-text{
-            margin:  0;
-            display: block;
+            margin-block:  30px;
+            display: flex;
+            justify-content: center;
             @include respond(phone){
                 margin-top: 30px;
             }
