--- a/src/index.scss
+++ b/src/index.scss
@@ -33,6 +33,12 @@ body{
     font-optical-sizing: auto;
     font-style: normal;
 }
+.container {
+    width: 100%;
+    max-width: 1240px;
+    margin: 0 auto;
+    padding: 0 35px;
+}
 #root{
     overflow: hidden;
 }
@@ -69,7 +75,9 @@ img{
         color:var(--cultured) !important;
     }
 }
-
+.container{
+    padding: 0 !important;
+}
 .section_wrapper{
     max-width: 1300px;
     padding-inline: 5rem;
