--- a/src/components/Onborading/Onboarding.scss
+++ b/src/components/Onborading/Onboarding.scss
@@ -181,7 +181,7 @@
         position: relative; 
         border: 1px solid #E7E9EA;
         border-radius: 20px;
-        background-color: var(--back-grey);
+        background-color: #F5F5F7;
         
         cursor: pointer;
 
