--- a/src/components/IdentificationType/IdentificationType.scss
+++ b/src/components/IdentificationType/IdentificationType.scss
@@ -16,11 +16,14 @@
 
 
         h3{
+            text-transform: uppercase;
             font-size: 18px;
             font-weight: 600;
             color: #1ED768;
+            margin-bottom: 30px;
             letter-spacing: 0px;
             @include respond(phone){
+              margin-bottom: 0;
               font-size: 14px;
             }
         }
@@ -31,7 +34,7 @@
             @include respond(phone){
               font-size: 24px;
               letter-spacing: -1px;
-              margin-top: 14px;
+              margin-top: 10px;
             }
         }
 
@@ -72,9 +75,14 @@
       width: 80vw;
     }
   }
+  .props{
+    justify-content: start;
+    padding-top: 82px;
+  }
   @include respond(phone){
     
     .props{
+
       display: none;
     }
   }  
@@ -125,7 +133,7 @@
   ul li {
     font-size: 16px;
     font-weight: 400;
-    height: 60px;;
+    height: 70px;
     font-size: 1rem;
     border-bottom: 1px solid #E7E9EA;
     display: flex;              /* Use flexbox */
@@ -133,7 +141,7 @@
     text-align: left; 
     
     @include respond(phone){
-      
+      height: auto;
       align-items: start;
       margin-bottom: 20px;
       gap: 10px;
@@ -146,13 +154,16 @@
         display: inline-flex;
         align-items: center;
         justify-content: center;
-        font-size: 19px;
+        font-size: 24px;
         color: #889097;
+       
       }
       .type_description{
         display: flex;
         flex-direction: column;
-        font-size: 14px;
+        font-size: 16px;
+        font-weight: 500;
+        
 
         .value-inline {
           display: inline-flex; // Keeps elements inline and aligned
@@ -198,9 +209,15 @@
   }
 
   .mobile{
+    font-size: 16px;
+    font-weight: 500;
     display: none;
+    
     @include respond(phone){
       display: block;
+      &_span_title{
+        margin-bottom: 5px;
+      }
     }
   }
 
