--- a/src/components/PaymentType/PaymentType.scss
+++ b/src/components/PaymentType/PaymentType.scss
@@ -25,7 +25,7 @@
     }
 
     &_left {
-        width: 50%;
+        width: 55%;
         height: 100%;
         display: flex;
         flex-direction: column;
@@ -56,7 +56,7 @@
             line-height: 1;
             color: white;
             font-size: 64px;
-            max-width: 300px;
+            // max-width: 300px;
             font-weight: 600;
             letter-spacing: -2px;
 
