--- a/src/components/Request/Request.scss
+++ b/src/components/Request/Request.scss
@@ -1,8 +1,9 @@
 @import "../../styles/mixins.scss";
 
 .feadback_section{
+    width: 100%;
     background: #F5F5F7;
-    padding-block: 30px;
+    padding-block: 60px;
 }
 .feadback{
     display: flex;
@@ -27,6 +28,8 @@
             color: #1ED768;
             font-size: 18px;
             font-weight: 600;
+            text-transform: uppercase;
+            margin-bottom: 30px;
             @include respond(phone){
                 font-size: 14px;
                 margin-bottom: 14px;
@@ -46,27 +49,20 @@
             flex-direction: column;
             gap:30px;
             margin-block: 60px;
-            @include respond(phone){
-                margin-block: 20px;
-                gap:12px;
-                .addres_text{
-                    padding: 16px 0;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: space-between;
-                    h4{
-                        font-size: 18px;
-                    }
-                    p{
-                        font-size: 14px;
-                    }
+            
+            .addres_text{
+                max-width: 320px;
+                h4{
+                    margin-bottom: 20px;
+                }
+                p{
+                    line-height: 1.5;
                 }
             }
-            
             >div{
                 height: 100px;
                 display: inline-flex;
-                gap:10px;
+                gap:20px;
 
                 @include respond(phone){
                     gap:20px;
@@ -81,7 +77,7 @@
                     align-items: center;
                     font-size: 24px;
                     color: #007AFF;
-                    @include respond(phone){
+                @include respond(phone){
                         height: 100%;
                     }
                 }
@@ -100,16 +96,17 @@
         }
     }
     form{
+        position: relative;
         width: 460px;
         display: flex;
         flex-direction: column;
         padding: 30px;
         background: #ffffff;
         border-radius: 30px;
-
+        
         @include respond(phone){
-            
             width: 100%;
+            // margin: 0 20px;
         }
         .inputs{
             margin: 30px 0;
@@ -167,5 +164,10 @@
             cursor: pointer;
         }
         
+    }
+    .addres{
+        span{
+            width: 44px;
+        }
     }
 }
