--- a/src/components/TerminalType/TerminalType.scss
+++ b/src/components/TerminalType/TerminalType.scss
@@ -31,6 +31,9 @@
           font-size: 24px;
         }
       }
+      p{
+        margin-top: 30px;
+      }
   
       @include respond(tab-port) {
         text-align: center;
