--- a/src/components/WelcomePay2/WelcomeMain.scss
+++ b/src/components/WelcomePay2/WelcomeMain.scss
@@ -1,25 +1,15 @@
 @import "../../styles/mixins.scss";
 
 
-.scroll-container{
-    width: 100%;
-    display: flex;
-    align-items: center; 
-    justify-content: center;
-    flex-direction:column; 
-    @include respond(phone){
-        overflow: hidden;
-    }
-
-}
 .welcome-main{
-    // padding: 140px 0 0;
-    // @include respond(phone){
-    //     padding: 60px 0 0;
+    padding: 90px 0 0;
+    @include respond(phone){
+        padding: 60px 0 0;
 
-    // }
+    }
 }
 .welcome {
+    // width: 100%;
     @include backgroundImage("../../assets/welcome-back.png", 90vh, 100%); // Custom height for .welcome
     height:90vh;
     display: flex;
@@ -37,11 +27,12 @@
     .hand-line {
         position: absolute;
         width: 30%;
-        left: 0;
-        top: 0;
+        left: -5%;
+        top: -5%;
         z-index: 10;
         transform: translate(-25%,25%);
         img{
+            top:0%;
             width: 100%;
         }
     }
@@ -62,10 +53,12 @@
     &_left_img {
         width: 70%;
         position: absolute;
-        left: -40%; 
+        left: -43%; 
+        top: -10%;
         z-index: 10;
         @include respond(phone){
-            
+            top:15%;
+            // transform: translateY(120px);
             // overflow-anchor: hidden;
         }
 
@@ -98,7 +91,8 @@
         
         span {
             display: inline-block;
-            width: 200px;
+            width: 300px;
+            text-align: left;
             color: #3AFC87;
             text-shadow: 0px 0px 10px #3AFC87;
             
